# hv-bie

./: .gitignore  AGENTS.md  API_SPEC.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  SRS.md  mypy.ini  pyproject.toml
.agents/: code-generation.md  documentation.md  performance.md  testing.md
.agents/git-workflow/: code-review.md  collaboration.md  commit-guidelines.md  special-notes.md  version-update.md
hv_bie/: __init__.py  snapshot.py
hv_bie/parsers/: __init__.py  core.py  vitals.py
hv_bie/types/: __init__.py  models.py  system_monsters.py
tests/: conftest.py  test_parse_vitals.py  test_snapshot_integration.py
tests/fixtures/hv/: The HentaiVerse.htm  The HentaiVerse1.htm  The HentaiVerse3.htm  The HentaiVerse4.htm  The HentaiVerse5.htm  The HentaiVerse6.html  The HentaiVerse7.html
tests/fixtures/hv/The HentaiVerse6_files/: hvg.css
tests/fixtures/hv/The HentaiVerse7_files/: hvc.js
tests/perf/: test_nfr_p1_performance.py
tests/unit/: test_parsers.py  test_snapshot_integration.py
