[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hv_bie"
version = "0.1.0"
description = "HV Battle Intelligence Extractor: parse HentaiVerse battle HTML into structured Python dataclasses"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "HV-BIE", email = "noreply@example.com" }]
dependencies = ["beautifulsoup4>=4.13.4"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://example.com/hv-bie"
