[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hv_bie"
version = "0.3.2"
description = "HV Battle Intelligence Extractor: parse HentaiVerse battle HTML into structured Python dataclasses"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Kuan-Lun Wang", email = "polyphonicared@gmail.com" }]
dependencies = ["beautifulsoup4>=4.13.4"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Kuan-Lun/hv-bie"
Source = "https://github.com/Kuan-Lun/hv-bie"
Tracker = "https://github.com/Kuan-Lun/hv-bie/issues"

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest"]

[tool.setuptools]
# Use automatic package discovery (PEP 621 recommended approach)
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hv_bie*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
# Publish PEP 561 typing marker
"hv_bie" = ["py.typed"]

[tool.black]
line-length = 88

[tool.ruff]
src = ["hv_bie"]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]
extend-ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["hv_bie"]

